mxslc/tests/data/error/bad_data_type_4.mxsl
float a = 1.0;
color3 c = a;